# staticmon

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  deps.dot  profile_debug  profile_release  setup.sh  setup_debug.sh  setup_release.sh
cmake/: immer.cmake  lexy.cmake
experiments/bench/0/: config.json  fo
experiments/bench/1/: config.json
experiments/bench/2/: config.json  fo  sig
experiments/runner/: config.yaml  gen_config.py  plot.R  prepare_results.py  test-runner.cabal
experiments/runner/app/: Main.hs
experiments/runner/lib/: BenchmarkRunner.hs  EventGenerators.hs  EventPrinting.hs  Flags.hs  Monitors.hs  Process.hs  RandomTestRunner.hs  SignatureParser.hs  TestRunner.hs
experiments/runner/lib/Shelly/: Helpers.hs
experiments/tests/0/: sig
experiments/tests/1/: log
experiments/tests/10/: fo  log  sig
experiments/tests/11/: fo  log  sig
experiments/tests/12/: fo  log  sig
experiments/tests/13/: fo  log  sig
experiments/tests/14/: fo  log
experiments/tests/15/: fo  log
experiments/tests/16/: fo  log
experiments/tests/17/: fo  log  sig
experiments/tests/18/: fo
experiments/tests/19/: fo
experiments/tests/2/: sig
experiments/tests/20/: fo
experiments/tests/21/: fo  log
experiments/tests/22/: fo
experiments/tests/23/: fo
experiments/tests/24/: log
experiments/tests/25/: fo
experiments/tests/26/: fo  log
experiments/tests/28/: fo
experiments/tests/29/: fo  log
experiments/tests/3/: fo  log
experiments/tests/30/: fo
experiments/tests/31/: fo  log
experiments/tests/32/: fo  log
experiments/tests/33/: log
experiments/tests/34/: fo  log
experiments/tests/35/: log  sig
experiments/tests/36/: fo  log
experiments/tests/37/: fo
experiments/tests/38/: fo  log
experiments/tests/39/: fo  log
experiments/tests/4/: log
experiments/tests/40/: fo  log
experiments/tests/41/: fo
experiments/tests/42/: fo  log
experiments/tests/43/: fo
experiments/tests/44/: fo
experiments/tests/45/: fo
experiments/tests/46/: fo
experiments/tests/47/: fo  sig
experiments/tests/48/: fo
experiments/tests/49/: fo
experiments/tests/5/: fo  log  sig
experiments/tests/50/: fo  log
experiments/tests/51/: fo  log
experiments/tests/52/: fo  log
experiments/tests/53/: fo
experiments/tests/54/: fo  log
experiments/tests/55/: fo  log
experiments/tests/56/: fo  log  sig
experiments/tests/57/: fo  log  sig
experiments/tests/58/: fo  log  sig
experiments/tests/59/: fo  log
experiments/tests/6/: fo  log
experiments/tests/60/: fo  log  sig
experiments/tests/61/: fo  log  sig
experiments/tests/62/: fo  log
experiments/tests/63/: fo  log  sig
experiments/tests/64/: fo
experiments/tests/65/: fo
experiments/tests/66/: fo  log
experiments/tests/67/: fo
experiments/tests/68/: fo
experiments/tests/69/: fo
experiments/tests/7/: fo  log  sig
experiments/tests/70/: fo  log  sig
experiments/tests/71/: fo  log  sig
experiments/tests/72/: fo  log  sig
experiments/tests/8/: fo  log
experiments/tests/9/: fo  log
src/: CMakeLists.txt  binary_relational_ops.h  config.h.in  main.cpp  monitor_types.h  mp_helpers.h  mpredicate.h  msimpleop.h  mterm.h  staticmon.cpp  table.h  typename.h
src/common/: CMakeLists.txt  config.h.in  deps.cpp  monitor_types.h  mp_helpers.h  table.h  util.cpp  util.h
src/file_input/: CMakeLists.txt  deps.cpp  file_monitor_driver.cpp  file_monitor_driver.h  trace_parser.cpp  trace_parser.h
src/file_input/parser/: CMakeLists.txt  trace_parser.cpp  trace_parser.h
src/input_formula/: CMakeLists.txt  deps.cpp  formula.h
src/lib/: binary_relational_ops.h  mpredicate.h  msimpleop.h  msince.h  table.h  unary_temp_ops.h
src/lib/helpers/: binary_buffer.h
src/monitor/: CMakeLists.txt  deps.cpp  monitor.cpp  monitor.h  monitor_driver.h  verdict_printer.h
src/operators/: CMakeLists.txt  binary_relational_ops.h  deps.cpp  minterval.h  mpredicate.h  msimpleop.h  msince.h  mterm.h  operator_types.h  operators.h  unary_temp_ops.h
src/operators/helpers/: binary_buffer.h
src/staticmon/common/: mp_helpers.h  table.h  table_diff.h  typename.h  util.h
src/staticmon/file_input/: file_monitor_driver.h
src/staticmon/file_input/parser/: trace_parser.h
src/staticmon/input_formula/: formula.h  formula_in.h
src/staticmon/monitor/: monitor.h
src/staticmon/operators/: operators.h
src/staticmon/operators/detail/: aggregations.h  binary_buffer.h  binary_relational_ops.h  diff_reconstructor.h  minterval.h  mlet.h  mpredicate.h  mrelops.h  msimpleop.h  msince.h  mterm.h  muntil.h  operator_types.h  unary_temp_ops.h  verdict_printer.h
src/staticmon/socket_input/: socket_monitor_half.h  uds_monitor_driver.h
src/staticmon/socket_input/socket_types/: c_event_types.h  serialization_types.h
test/0/: formula.mfotl
test/1/: formula.mfotl
test/2/: fo  log
test/4/: fo  sig
test/test_runner/: CHANGELOG.md  LICENSE  test-runner.cabal
test/test_runner/app/: Main.hs
