add_subdirectory(common)
add_subdirectory(operators)
add_subdirectory(input_formula)
add_subdirectory(monitor)
if(ENABLE_FILE_INPUT)
  add_subdirectory(file_input)
endif()

set(STATICMON_SOURCES staticmon.cpp)
add_executable(staticmon ${STATICMON_SOURCES})
target_link_libraries(staticmon PRIVATE formula CONAN_PKG::fmt CONAN_PKG::abseil)
if(ENABLE_FILE_INPUT)
  target_link_libraries(staticmon PRIVATE file_driver)
endif()
