cabal-version: 3.0
name:          test-runner
version:       0.1.0.0
synopsis:      Test runner for staticmon
category:      Testing

executable test-runner
  main-is:            Main.hs
  other-modules:
    BenchmarkRunner
    EventGenerators
    EventPrinting
    Flags
    Monitors
    Process
    RandomTestRunner
    SignatureParser
    TestRunner

  build-depends:
    , aeson                  ^>=2.1.0.0
    , attoparsec             ^>=0.14.4
    , base                   ^>=4.14.3.0
    , cassava                ^>=0.5.2.0
    , clock                  ^>=0.8.3
    , concurrent-extra       ^>=0.7.0.12
    , containers             ^>=0.6.5.1
    , directory              ^>=1.3.7.0
    , either                 ^>=5.0.2
    , extra
    , filepath
    , fmt                    ^>=0.6.3.0
    , mtl                    ^>=2.2.2
    , optparse-applicative   ^>=0.17.0.0
    , random                 ^>=1.2.1.1
    , regex-tdfa             ^>=1.3.1.2
    , resourcet              ^>=1.2.6
    , terminal-progress-bar  >=0.4.1    && <0.4.2
    , text                   >=2.0      && <2.0.1
    , typed-process          ^>=0.2.10.1
    , unliftio               ^>=0.2.22.0
    , uuid                   ^>=1.3.15
    , vector                 ^>=0.13.0.0

  ghc-options:        -rtsopts -fno-full-laziness -threaded -W -Wextra
  hs-source-dirs:     app lib
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DoAndIfThenElse
    EmptyCase
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExtendedDefaultRules
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
